Added gunicorn. added profile and runtime.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
 asgiref==3.7.2
 astroid==2.15.8
-botocore==1.31.43
 colorama==0.4.6
 dill==0.3.7
 Django==4.2.5
 django-dotenv==1.4.2
+gunicorn==21.2.0
 isort==5.12.0
 jmespath==1.0.1
 lazy-object-proxy==1.9.0
 mccabe==0.7.0
+packaging==23.2
 platformdirs==3.11.0
 psycopg2==2.9.7
 psycopg2-binary==2.9.9
