--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.7.2
 astroid==2.15.8
 colorama==0.4.6
 dill==0.3.7
+dj-database-url==2.1.0
 Django==4.2.5
 django-dotenv==1.4.2
 gunicorn==21.2.0
@@ -20,6 +21,7 @@ python-dateutil==2.8.2
 six==1.16.0
 sqlparse==0.4.4
 tomlkit==0.12.1
+typing_extensions==4.9.0
 tzdata==2023.3
 urllib3==1.26.16
 whitenoise==6.6.0
