--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ colorama==0.4.6
 dill==0.3.7
 dj-database-url==2.1.0
 Django==4.2.5
-django-dotenv==1.4.2
+django-environ==0.11.2
 gunicorn==21.2.0
 isort==5.12.0
 jmespath==1.0.1
