--- a/requirements-old.txt
+++ b/requirements-old.txt
@@ -2,8 +2,9 @@ asgiref==3.7.2
 astroid==2.15.8
 colorama==0.4.6
 dill==0.3.7
+dj-database-url==2.1.0
 Django==4.2.5
-django-dotenv==1.4.2
+django-environ==0.11.2
 gunicorn==21.2.0
 isort==5.12.0
 jmespath==1.0.1
@@ -11,6 +12,7 @@ lazy-object-proxy==1.9.0
 mccabe==0.7.0
 packaging==23.2
 platformdirs==3.11.0
+psycopg2==2.9.7
 psycopg2-binary==2.9.9
 pycodestyle==2.11.1
 pylint==2.17.7
