--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ lazy-object-proxy==1.9.0
 mccabe==0.7.0
 packaging==23.2
 platformdirs==3.11.0
-psycopg2-binary==2.9.9
+psycopg2==2.9.9
 pycodestyle==2.11.1
 pylint==2.17.7
 pylint-plugin-utils==0.8.2
