--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,8 @@ invoice/
 orders/
 products/
 static/
-unused-files/
+staticfiles/
+local-cdn/
 
 ### Django.Python Stack ###
 # Byte-compiled / optimized / DLL files
