--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,9 +4,9 @@ on:
   workflow_call:
   workflow_dispatch:
   push:
-    branches: ["main"]
-  pull_branches:
-    branches: ["main"]
+    branches: [main]
+  pull_requests:
+    branches: [main]
 
 jobs:
   test_django:
