--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,10 +7,10 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
-    
+
 jobs:
   test_django:
-    uses: hmc/.github/workflows/test-django.yaml@main
+    uses: .github/workflows/test-django.yaml@main
   build:
     runs-on: ubuntu-latest
     needs: [test_django_job]
