Updated build.yaml a sixth time

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   test_django:
-    uses: ./.github/workflows/test-django.yaml@main
+    uses: ./.github/workflows/test-django.yaml
   build:
     runs-on: ubuntu-latest
     needs: [test_django_job]
