--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,7 +24,7 @@ jobs:
         with:
           token: ${{ secrets.DO_API_TOKEN_KEY }}
       - name: Login to DO Container Regitry with short-lived creds
-        uses: doctl registry login --expiry-seconds 1200
+        run: doctl registry login --expiry-seconds 1200
       - name: Build container image
         working-directory: ./hmc
         run: |
