--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,7 @@ jobs:
     uses: olara87/hmc/.github/workflows/test-django.yaml@main
   build:
     runs-on: ubuntu-latest
-    needs: [test_django_job]
+    needs: [test_django]
     env:
       CLUSTER_NAME: heicakes
     steps:
