--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,6 +32,8 @@ jobs:
           -t registry.digitalocean.com/heicakes/heidy-makes-web:latest \
           -t registry.digitalocean.com/heicakes/heidy-makes-web:${GITHUB_SHA::7}-${GITHUB_RUN_ID::5} \
           .
+    - name: Debug Tag
+      run: echo "Tag: ${GITHUB_SHA::7}-${GITHUB_RUN_ID::5}"
     - name: Push image
       run: |
         docker push registry.digitalocean.com/heicakes/heidy-makes-web --all-tags
