--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,7 +33,7 @@ jobs:
           -t registry.digitalocean.com/heicakes/heidy-makes-web:${GITHUB_SHA::7}-${GITHUB_RUN_ID::5} \
           .
     - name: Debug Tag
-      run: echo "Tag: ${GITHUB_SHA::7}-${GITHUB_RUN_ID::5}"
+      run: echo "Tag: ${GITHUB_SHA::7}-${{ github.run_id }}::5"
     - name: Push image
       run: |
         docker push registry.digitalocean.com/heicakes/heidy-makes-web --all-tags
