--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,8 +32,6 @@ jobs:
           -t registry.digitalocean.com/heicakes/heidy-makes-web:latest \
           -t registry.digitalocean.com/heicakes/heidy-makes-web:${GITHUB_SHA::7}-${GITHUB_RUN_ID::5} \
           .
-    - name: Debug Tag
-      run: echo "Tag: ${GITHUB_SHA::7}-${{ github.run_id }}::5"
     - name: Push image
       run: |
         docker push registry.digitalocean.com/heicakes/heidy-makes-web --all-tags
@@ -70,6 +68,8 @@ jobs:
         EOF
         kubectl delete secret heicakes-hmc-prod-env
         kubectl create secret generic heicakes-hmc-prod-env --from-env-file=hmc/.env.prod
+    - name: Debug Tag
+      run: echo "Tag: ${GITHUB_SHA::7}-${GITHUB_RUN_ID::5}"
     - name: Update Deployment image
       run: |
         kubectl set image deployment/heidy-makes-web-deployment heidy-makes-web=registry.digitalocean.com/heicakes/heidy-makes-web:${GITHUB_SHA::7}-${GITHUB_RUN_ID::5}
