--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test_django]
     env:
-      CLUSTER_NAME: heicakess
+      CLUSTER_NAME: heicakes
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
