--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -45,6 +45,12 @@ jobs:
         LOCAL_IP=${{ secrets.LOCAL_IP }}
         LOCAL_HOST=${{ secrets.LOCAL_HOST }}
         ALLOWED_IP=${{ secrets.ALLOWED_IP }}
+
+        SECURE_HSTS_SECONDS=${{ secrets.SECURE_HSTS_SECONDS }}
+        SECURE_SSL_REDIRECT=${{ secrets.SECURE_SSL_REDIRECT }}
+        SESSION_COOKIE_SECURE=${{ secrets.SESSION_COOKIE_SECURE }}
+        CSRF_COOKIE_SECURE=${{ secrets.CSRF_COOKIE_SECURE }}
+        
         ENV_ALLOWED_HOST=${{ secrets.ENV_ALLOWED_HOST }}
         DJANGO_SUPERUSER_USERNAME=${{ secrets.DJANGO_SUPERUSER_USERNAME }}
         DJANGO_SUPERUSER_PASSWORD=${{ secrets.DJANGO_SUPERUSER_PASSWORD }}
