--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -50,6 +50,8 @@ jobs:
         SECURE_SSL_REDIRECT=${{ secrets.SECURE_SSL_REDIRECT }}
         SESSION_COOKIE_SECURE=${{ secrets.SESSION_COOKIE_SECURE }}
         CSRF_COOKIE_SECURE=${{ secrets.CSRF_COOKIE_SECURE }}
+        SECURE_HSTS_INCLUDE_SUBDOMAINS=${{ secrets.SECURE_HSTS_INCLUDE_SUBDOMAINS }}
+        SECURE_HSTS_PRELOAD=${{ secrets.SECURE_HSTS_PRELOAD }}
         
         ENV_ALLOWED_HOST=${{ secrets.ENV_ALLOWED_HOST }}
         DJANGO_SUPERUSER_USERNAME=${{ secrets.DJANGO_SUPERUSER_USERNAME }}
