--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,8 @@
-version: '3.9'
+# version: '3.9'
 services:
   # hmc:
   #   depends_on:
-  #     - postgres_database
+  #     - postgres_db
   #   build:
   #     context: ./hmc
   #     dockerfile: Dockerfile
@@ -16,16 +16,16 @@ services:
   #   command: sh -c "chmod +x /app/migrate.sh && sh /app/migrate.sh && /app/entrypoint.sh"
   #   volumes:
   #     - staticfiles:/app/staticfiles/
-  postgres_database:
+  postgres_db:
     image: postgres
     restart: always
-    command: -p 5434
+    command: -p 5432
     env_file:
-      - hmc/.env.prod
+      - hmc/.env
     expose:
-      - 5434
+      - 5432
     ports:
-      - "5434:5434"
+      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data/
   redis_db:
@@ -40,7 +40,7 @@ services:
     entrypoint: redis-server --appendonly yes --port 6388
 
 volumes:
-  staticfiles:
-    external: true
+  # staticfiles:
+  #   external: true
   postgres_data:
   redis_data:
