--- a/k8s/hmc.yaml
+++ b/k8s/hmc.yaml
@@ -1,38 +1,37 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: heidy-makes-web-deployment
+  name: hmc-web-deployment
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: heidy-makes-web-deployment
+      app: hmc-web-deployment
   template:
     metadata:
       labels:
-        app: heidy-makes-web-deployment
+        app: hmc-web-deployment
     spec:
       containers:
       - name: hmc
-        image: registry.digitalocean.com/heicakes/heidy-makes-web:latest
+        image: registry.digitalocean.com/hmc/hmc-web:latest
         imagePullPolicy: Always
         envFrom:
           - secretRef:
-              name: heicakes-hmc-prod-env
+              name: hmc-web-prod-env
         env:
           - name: PORT
             value: "8001"
         ports:
         - containerPort: 8001
       imagePullSecrets:
-        - name: heicakes
+        - name: hmc
 
 ---
-
 apiVersion: v1
 kind: Service
 metadata:
-  name: heidy-makes-web-service
+  name: hmc-web-service
 spec:
   type: LoadBalancer
   ports:
@@ -41,4 +40,4 @@ spec:
       port: 80
       targetPort: 8001
   selector:
-    app: heidy-makes-web-deployment
+    app: hmc-web-deployment
