--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,10 +15,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test_django]
     env:
-      CLUSTER_NAME: heicakes
+      CLUSTER_NAME: hmc
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Install doctl
       uses: digitalocean/action-doctl@v2
       with:
@@ -29,12 +29,12 @@ jobs:
       working-directory: ./hmc
       run: |
         docker build -f Dockerfile \
-          -t registry.digitalocean.com/heicakes/heidy-makes-web:latest \
-          -t registry.digitalocean.com/heicakes/heidy-makes-web:${GITHUB_SHA::7}-${GITHUB_RUN_ID::5} \
+          -t registry.digitalocean.com/hmc/hmc-web:latest \
+          -t registry.digitalocean.com/hmc/hmc-web:${GITHUB_SHA::7}-${GITHUB_RUN_ID::5} \
           .
     - name: Push image
       run: |
-        docker push registry.digitalocean.com/heicakes/heidy-makes-web --all-tags
+        docker push registry.digitalocean.com/hmc/hmc-web --all-tags
     - name: K8s cluster kubeconfig file with/ short-lived creds
       run: |
         doctl kubernetes cluster kubeconfig save --expiry-seconds 600 ${{ env.CLUSTER_NAME }}
@@ -73,16 +73,16 @@ jobs:
         COMPANY_WEBSITE=${{ secrets.COMPANY_WEBSITE }}
         EMAIL_USE_TLS=${{ secrets.EMAIL_USE_TLS }}
         EOF
-        kubectl delete secret heicakes-hmc-prod-env
-        kubectl create secret generic heicakes-hmc-prod-env --from-env-file=hmc/.env.prod
+        kubectl delete secret hmc-hmc-prod-env
+        kubectl create secret generic hmc-hmc-prod-env --from-env-file=hmc/.env.prod
     - name: Update Deployment image
       run: |
-        kubectl set image deployment/heidy-makes-web-deployment hmc=registry.digitalocean.com/heicakes/heidy-makes-web:${GITHUB_SHA::7}-${GITHUB_RUN_ID::5}
+        kubectl set image deployment/hmc-web-deployment hmc=registry.digitalocean.com/hmc/hmc-web:${GITHUB_SHA::7}-${GITHUB_RUN_ID::5}
     - name: Wait for rollout to finish
       run: |
-        kubectl rollout status deployment/heidy-makes-web-deployment
+        kubectl rollout status deployment/hmc-web-deployment
     - name: Post-build Django Commands - Migrate / Collectstatic
       run: |
-        export SINGLE_POD_NAME=$(kubectl get pod -l app=heidy-makes-web-deployment -o jsonpath="{.items[0].metadata.name}")
+        export SINGLE_POD_NAME=$(kubectl get pod -l app=hmc-web-deployment -o jsonpath="{.items[0].metadata.name}")
         kubectl exec -it $SINGLE_POD_NAME -- bash /app/migrate.sh
         kubectl exec -it $SINGLE_POD_NAME -- bash /app/collectstatic.sh
